# zeeder

./: .dockerignore  .env-example.txt  .env.example  .gitignore  CONTEXT.md  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  codecov.yml  commit_checks.sh  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
deploy/gcp/: IMAGE  README.md  deploy-seeders.sh  fleet.conf.example  seeders.sh  startup-script.sh.tmpl
docs/: README.md  architecture.md  development.md  network-upgrades.md  operations.md
docs/adr/: 0001-zebra-network.md  0002-hickory-dns.md  0003-rate-limiting.md  0004-peer-servability.md  0005-multi-network-topology.md  0006-image-identity-and-fleet-delivery.md  0007-observed-network-upgrade-activation.md
src/: build_info.rs  commands.rs  config.rs  crawl.rs  dns.rs  health.rs  main.rs  metrics.rs  probe.rs  rpc_tip.rs  seeder.rs  server.rs  tip_filter.rs
src/crawl/: activation.rs  address_cache.rs  chain_tip.rs  servability.rs
src/dns/: rate_limiter.rs  request_handler.rs
src/server/: address_cache.rs  chain_tip.rs  eligibility.rs  rate_limiter.rs
src/tests/: cli_tests.rs  config_tests.rs  mod.rs
