[package]
name = "zebra-seeder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Zcash DNS seeder based on the Zebra architecture."
repository = "https://github.com/zcashfoundation/dnsseederNG"
keywords = ["zcash", "zebra", "dns", "seeder", "blockchain"]
categories = ["cryptography::cryptocurrencies", "network-programming"]


[dependencies]
tokio = { version = "1.52", features = ["full", "tracing"] }
hickory-dns = "0.26.1"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
tower = { version = "0.5", features = ["util"] }
# Zebra dependencies - assuming latest published versions or git if needed.
# For scaffolding, we use version wildcards or recent versions to ensure compilation starts.
zebra-network = "8.0.0"
zebra-chain = "9.0.0"
dotenvy = "0.15.7"
rand = "0.10.1"
async-trait = "0.1.89"
hickory-server = "0.26.1"
hickory-proto = "0.26.1"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
governor = "0.10"

[dev-dependencies]
tokio-test = "0.4.5"
proptest = "1.11"
hickory-resolver = "0.26.1"
tracing-test = "0.2"

[build-dependencies]
vergen-gitcl = { version = "9.1", features = ["build"] }
