[package]
name = "zebra-seeder"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A Zcash DNS seeder based on the Zebra architecture."
repository = "https://github.com/zcashfoundation/dnsseederNG"
keywords = ["zcash", "zebra", "dns", "seeder", "blockchain"]
categories = ["cryptography::cryptocurrencies", "network-programming"]


[dependencies]
tokio = { version = "1.52", features = ["full", "tracing"] }
hickory-dns = "0.26.1"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
tower = { version = "0.5", features = ["util"] }
# Zebra dependencies - assuming latest published versions or git if needed.
# For scaffolding, we use version wildcards or recent versions to ensure compilation starts.
zebra-network = "8.0.0"
zebra-chain = "9.0.0"
dotenvy = "0.15.7"
rand = "0.10.1"
async-trait = "0.1.89"
hickory-server = "0.26.1"
hickory-proto = "0.26.1"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
governor = "0.10"
toml = "1"

[dev-dependencies]
hickory-resolver = "0.26.1"
temp-env = "0.3"

[build-dependencies]
vergen-gitcl = { version = "9.1", features = ["build"] }

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
missing_docs = "deny"
unnameable_types = "deny"
unreachable_pub = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
expect_used = "deny"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
redundant_pub_crate = "allow"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
wildcard_enum_match_arm = "deny"
