[package]
name = "zeeder"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Zeeder, a Zcash DNS seeder based on the Zebra architecture."
repository = "https://github.com/zcashfoundation/zeeder"
keywords = ["zcash", "zebra", "dns", "seeder", "blockchain"]
categories = ["cryptography::cryptocurrencies", "network-programming"]


[dependencies]
tokio = { version = "1.52", default-features = false, features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
config = { version = "0.15", default-features = false, features = ["toml"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "usage",
] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "registry",
    "std",
] }
color-eyre = { version = "0.6", default-features = false, features = [
    "track-caller",
] }
tower = { version = "0.5", default-features = false, features = ["util"] }
zebra-network = { version = "10.0.0", default-features = false }
zebra-chain = { version = "11.0.0", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
rand = { version = "0.10.1", default-features = false, features = [
    "thread_rng",
] }
async-trait = { version = "0.1.89", default-features = false }
hickory-server = { version = "0.26.1", default-features = false }
hickory-proto = { version = "0.26.1", default-features = false, features = [
    "std",
] }
metrics = { version = "0.24.6", default-features = false }
metrics-exporter-prometheus = { version = "0.18.3", default-features = false, features = [
    "http-listener",
] }
governor = { version = "0.10", default-features = false, features = [
    "dashmap",
    "quanta",
    "std",
] }
toml = { version = "1", default-features = false, features = [
    "display",
    "serde",
    "std",
] }

[dev-dependencies]
temp-env = { version = "0.3", default-features = false }

[build-dependencies]
vergen-gitcl = { version = "10.0", default-features = false, features = ["build"] }

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
missing_docs = "deny"
unnameable_types = "deny"
unreachable_pub = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
expect_used = "deny"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
redundant_pub_crate = "allow"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
wildcard_enum_match_arm = "deny"
